* set filter placeholder to italic * draw a timeline in the viewer behind the existing frames so that if there is a small number of frames, the timeline goes till the end of the viewport https://github.com/IBM-Bluemix/openwhisk-darkvisionapp/issues/48

--- a/web/public/css/darkvision-light.css
+++ b/web/public/css/darkvision-light.css
@@ -181,6 +181,22 @@ label.md-button {
   color: #ee6161;
 }
 
+::-webkit-input-placeholder {
+  color: #B8C1C1;
+}
+
+::-moz-placeholder {
+  color: #B8C1C1;
+}
+
+:-ms-input-placeholder {
+  color: #B8C1C1;
+}
+
+:-moz-placeholder {
+  color: #B8C1C1;
+}
+
 .video-frame-timeline {
   width: 2px;
   background-color: #ee6161 !important;
